--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
                         <input type="number" id="input_anhos" class="form-control"><br>
                     </div>
                 </div>
+                <div class="col-7">
+                    <div id="grafica_poblacion">
+
+                    </div>
+                    <div id="res_fecundidad">
+                        
+                    </div>
+                </div>
             </div>
 
         </div>
