--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
                         </div><br>
                         
 
-                        <label for="tasa_nat" class="form-label">Tasa de natalidad</label>
+                        <label for="tasa_nat_masc" class="form-label">Tasa de natalidad Masculina</label>
                         <div class="input-group">
-                           <input type="number" id="tasa_nat" class="form-control"> 
+                           <input type="number" id="tasa_nat_masc" class="form-control"> 
+                           <span class="input-group-text">%</span>
+                        </div><br>
+
+                        <label for="tasa_nat_fem" class="form-label">Tasa de natalidad Femenina</label>
+                        <div class="input-group">
+                           <input type="number" id="tasa_nat_fem" class="form-control"> 
                            <span class="input-group-text">%</span>
                         </div><br>
                         
