--- a/index.html
+++ b/index.html
@@ -7,7 +7,73 @@
     <title>Ejercicio 1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="./node_modules/chart.js/dist/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+        var poblacion = [];
+        var poblacionFem = [];
+    </script>
+    <script>
+        function calcular() {
+            poblacion = [];
+            var numeroAnhos = parseInt(document.getElementById("input_anhos").value)
+            var poblacionMasculina = parseInt(document.getElementById("input_masc").value)
+            var poblacionFemenina = parseInt(document.getElementById("input_fem").value)
+            var mortalidadMasculina = parseInt(document.getElementById("tasa_mort_masc").value) / 100
+            var mortalidadFemenina = parseInt(document.getElementById("tasa_mort_fem").value) / 100
+            var natalidadMasculina = parseInt(document.getElementById("tasa_nat_masc").value) / 100
+            var natalidadFemenina = parseInt(document.getElementById("tasa_nat_fem").value) / 100
+            var poblacionFertil = parseInt(document.getElementById("num_mujeres_fertil").value)
+
+            //TODO VERIFICAR QUE TODOS LOS CAMPOS SEAN VALIDOS
+
+            console.log(calculoPoplacion(numeroAnhos, poblacionMasculina, natalidadMasculina, mortalidadMasculina));
+            console.log(poblacion);
+            numNacimientos = poblacionMasculina * natalidadMasculina + poblacionFemenina * natalidadFemenina;
+            //console.log(calculoFecundidad(numNacimientos, poblacionFertil));
+            const labels = [];
+            for(let i=1;i<=poblacion.length;i++){
+                labels.push(i)
+            }
+            
+            const data = {
+                labels:labels,
+                datasets: [{
+                  label: 'Grafica de Poblacion simulada',
+                  backgroundColor: 'rgb(255, 99, 132)',
+                  borderColor: 'rgb(255, 99, 132)',
+                  data: poblacion,
+                }]
+            };
+            const config = {
+                type: 'line',
+                data: data,
+                options: {}
+            };
+            const myChart = new Chart(
+            document.getElementById('myChart'),
+                config
+            );
+        }   
+    </script>
+    <script>
+        function calculoPoplacion(n, p, tasa_nat, tasa_mort) {
+            if (n == 0) {
+                return p;
+            } else {
+                anhoAnterior = calculoPoplacion(n - 1, p, tasa_nat, tasa_mort);
+                poblacionActual = Math.round(anhoAnterior + anhoAnterior * tasa_nat - anhoAnterior * tasa_mort);
+                poblacion.push(poblacionActual);
+            
+                return poblacionActual;
+            }
+        }
+    </script>
+    <script>
+        function calculoFecundidad(numNacimientos, pf) {
+            //TODO CALCULAR POR AÑO
+            return numNacimientos / pf * 10;
+        }
+    </script>
 </head>
 
 <body>
@@ -63,17 +129,15 @@
             </div>
             <div class="col-7">
                 <div id="grafica_poblacion">
-
+                    <canvas id="myChart"></canvas>
+                    <div id="scripting"></div>
                 </div>
                 <div id="res_fecundidad">
 
                 </div>
             </div>
         </div>
-
     </div>
-
-    <script src="main.js"></script>
 </body>
 
 </html>
