--- a/index.html
+++ b/index.html
@@ -66,8 +66,15 @@
                     <canvas id="myChart"></canvas>
                     <div id="scripting"></div>
                 </div>
-                <div id="res_fecundidad">
+                <div class="my-3">
+                    <table id="table_results">
 
+                    </table>
+                </div>
+                <div style="text-align: -webkit-center;">
+                    <table id="fecundidad_results">
+
+                    </table>
                 </div>
             </div>
         </div>
