--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         <div class="row">
             <div class="col-5">
                 <div id="formulario" class="container">
-                    <h2 style="display: inline-block;">Datos de poblacion</h2>
+                    <h2 style="display: inline-block;">Datos de población</h2>
                     <span style="float: right;margin-top: 6px;">
                         <button type="button" class="btn" id="help_button" data-toggle="modal" data-target="#helpModal" >
                             <i class="far fa-question-circle"></i>
                         </button>
                     </span>
 
-                    <label for="input_masc" class="form-label">Poblacion Masculina</label>
+                    <label for="input_masc" class="form-label">Población Masculina</label>
                     <input type="number" id="input_masc" class="form-control"><br>
 
-                    <label for="input_fem" class="form-label">Poblacion Femenina</label>
+                    <label for="input_fem" class="form-label">Población Femenina</label>
                     <input type="number" id="input_fem" class="form-control"><br>
 
                     <label for="tasa_mort_masc" class="form-label">Tasa de mortalidad Masculina</label>
@@ -99,11 +99,11 @@
             </div>
             <div class="modal-body">
                 <p>El simulador de crecimiento poblacional calcula el crecimiento
-                    de una poblacion, dados sus tasas de natalidad y mortalidad (en porcentaje).
+                    de una población, dados sus tasas de natalidad y mortalidad (en porcentaje).
                 </p>
                 <p>
-                    Se calculara la poblacion femenina y masculina, asi como la cantidad de muertes
-                    y nacimientos por sexo cada año. El simulador utiliza la siguiente funcion recursiva:
+                    Se calculará la población femenina y masculina, así como la cantidad de muertes
+                    y nacimientos por sexo cada año. El simulador utiliza la siguiente función recursiva:
                 </p>
                 <p>
                     H: Poblacion actual<br>
@@ -113,7 +113,7 @@
                 </p>
                 <img src="./img/formula.PNG" alt="formula">
                 <p>
-                    El mismo calculo se realiza para ambos sexos de la poblacion. 
+                    El mismo calculo se realiza para ambos sexos de la población. 
                 </p>
             </div>
             <div class="modal-footer">
