--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
                 </p>
                 <img src="./img/formula.PNG" alt="formula">
                 <p>
-                    El mismo calculo se realiza para ambos sexos de la población. 
+                    El mismo cálculo se realiza para ambos sexos de la población. 
                 </p>
                 <p>
-                    Para el calculo de la tasa de fecundidad se utiliza la siguiente función:
+                    Para el cálculo de la tasa de fecundidad se utiliza la siguiente función:
                 </p>
                 <img src="./img/TF.PNG" alt="Tasa de fecunidad">
                 <h2>Entradas:</h2>
